Enhance sign-in functionality by implementing user redirection upon successful authentication, updating UI components for better layout, and adding localization support for sign-in page texts in English and Polish. Refactor AuthHeader component to remove unnecessary props and improve styling.

--- a/localization/locales/en.json
+++ b/localization/locales/en.json
@@ -32,5 +32,18 @@
                 "description": "Users can switch languages by tapping on country flags."
             }
         }
+    },
+    "sign-in-page": {
+        "sign-in":"Sign In",
+        "gmail": "Continue with Gmail",
+        "apple": "Continue with Apple",
+        "email": "Continue with Email",
+        "submit": "Submit",
+        "welcome-words": "By continuing you agree TeamUp \n Terms of Service and Privacy Policy",
+        "email-sign-in-title": "Sign In with Email",
+        "password-label": "YOUR PASSWORD",
+        "forgot-password": "Forgot Password?",
+        "no-account": "Don't have an account?",
+        "sign-up": "Sign Up"
     }
 }
